# storage/api-docs/api-docs.json
@@ -417,6 +417,92 @@
                 }
             }
         },
+        "/api/orders/{company_id}": {
+            "get": {
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "All orders",
+                "description": "All orders",
+                "operationId": "all_orders",
+                "parameters": [
+                    {
+                        "name": "company_id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "number",
+                                            "example": 1
+                                        },
+                                        "products": {
+                                            "type": "string",
+                                            "example": ""
+                                        },
+                                        "table": {
+                                            "type": "string",
+                                            "example": ""
+                                        },
+                                        "total": {
+                                            "type": "string",
+                                            "example": ""
+                                        },
+                                        "extra": {
+                                            "type": "string",
+                                            "example": ""
+                                        },
+                                        "user": {
+                                            "type": "string",
+                                            "example": ""
+                                        },
+                                        "in_restaurant": {
+                                            "type": "string",
+                                            "example": ""
+                                        },
+                                        "note": {
+                                            "type": "string",
+                                            "example": ""
+                                        },
+                                        "status": {
+                                            "type": "string",
+                                            "example": ""
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "NOT FOUND",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": ""
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/products/{company_id}": {
             "get": {
                 "tags": [
@@ -450,7 +536,19 @@
                                             "type": "string",
                                             "example": ""
                                         },
-                                        "icon": {
+                                        "price": {
+                                            "type": "string",
+                                            "example": ""
+                                        },
+                                        "images": {
+                                            "type": "string",
+                                            "example": ""
+                                        },
+                                        "category": {
+                                            "type": "string",
+                                            "example": ""
+                                        },
+                                        "status": {
                                             "type": "string",
                                             "example": ""
                                         }
@@ -559,6 +657,10 @@
         {
             "name": "Categories",
             "description": "Categories"
+        },
+        {
+            "name": "Orders",
+            "description": "Orders"
         },
         {
             "name": "Products",
